# IROS2024-Bin-Packing

./: .gitignore  README.md  pyproject.toml
src/action_predictor/: action_predictor.py
src/action_predictor/config/: predictor_config.json
src/packing_score_predictor/: dataloaders.py  evaluate.py  losses.py  model.py  train_classifier.py  train_score_predictor.py  utils.py
src/packing_score_predictor/checkpoints/model_ckpt/: best_model.pt
src/packing_score_predictor/config/: training_params_classifier.json  training_params_score.json
src/sim_env/: env.py  real2sim.py  reproduce_env.py
src/sim_env/assets/: base_model.xml  package_definitions.csv  scene.xml
src/sim_env/assets/meshes/: paddle.stl
src/sim_env/models/: container_xml.py  package_xml.py  scene_xml.py  specific_scene_xml.py
src/sim_env/scripts/: multiple_run.sh
src/sim_env/utils/: collision.py  container.py  conversion.py  score.py
